# maxwell_ros2

./: README.md  start.sh
src/camera_driver/: CMakeLists.txt  README.md  README.txt  package.xml
src/camera_driver/config/: camera_params.yaml
src/camera_driver/include/camera_driver/: camera_node.hpp
src/camera_driver/launch/: camera.launch.py  camera_launch.py
src/camera_driver/src/: camera_driver_main.cpp  camera_listener.cpp  camera_node.cpp
src/game_controller_driver/: CMakeLists.txt  README.md  README.txt  package.xml
src/game_controller_driver/config/: game_controller_params.yaml
src/game_controller_driver/include/game_controller_driver/: game_controller_node.hpp
src/game_controller_driver/launch/: game_controller.launch.py  game_controller_launch.py
src/game_controller_driver/src/: game_controller_listener.cpp  game_controller_main.cpp  game_controller_mock.cpp  game_controller_node.cpp
src/imu_driver/: CMakeLists.txt  MIGRATION_GUIDE.md  README.md  package.xml
src/imu_driver/config/: imu_params.yaml
src/imu_driver/include/imu_driver/: imu_node.hpp
src/imu_driver/launch/: imu.launch.py  imu_launch.py
src/imu_driver/src/: imu_driver_main.cpp  imu_listener.cpp  imu_node.cpp  imu_subscriber_example.cpp
src/maxwell_behavior/: CMakeLists.txt  package.xml
src/maxwell_behavior/src/: fsm_node.cpp
src/maxwell_bringup/: package.xml  setup.cfg  setup.py
src/maxwell_bringup/launch/: play_with_gc.launch.py  play_without_gc.launch.py
src/maxwell_core/: CMakeLists.txt  angle.hpp  class_exception.hpp  logger.hpp  matrix.hpp  model.hpp  number.hpp  package.xml
src/maxwell_core/parser/: parser.hpp
src/maxwell_core/src/: parser.cpp
src/maxwell_motion/: CMakeLists.txt  package.xml
src/maxwell_motion/src/: walk_node.cpp
src/maxwell_msgs/: CMakeLists.txt  package.xml
src/maxwell_msgs/msg/: Ball.msg  BehaviorCmd.msg  JointCommand.msg  Odom.msg  WorldState.msg
src/maxwell_remote/: CMakeLists.txt  package.xml
src/maxwell_sensors/: CMakeLists.txt  package.xml
src/maxwell_vision/: CMakeLists.txt  package.xml  vision.cpp
src/maxwell_vision/include/: vision.hpp
src/maxwell_vision/maxwell_vision/: CMakeLists.txt  package.xml
src/maxwell_vision/maxwell_vision/include/: vision.hpp
src/maxwell_vision/maxwell_vision/src/: vision_node.cpp
src/maxwell_vision/src/: vision.cpp  vision_node.cpp
src/maxwell_world/: CMakeLists.txt  package.xml
src/maxwell_world/player/core/: CMakeLists.txt  worldmodel.cpp  worldmodel.hpp
src/maxwell_world/src/: world_node.cpp  worldmodel_node.cpp
src/motor_driver/: CMakeLists.txt  README.md  README.txt  package.xml
src/motor_driver/config/: motor_params.yaml
src/motor_driver/docs/: MIGRATION_COMPARISON.md
src/motor_driver/include/motor_driver/: motor_node.hpp
src/motor_driver/launch/: motor.launch.py  motor_launch.py
src/motor_driver/src/: joint_state_viewer.cpp  motor_listener.cpp  motor_main.cpp  motor_node.cpp
