<?xml version="1.0"?>
<package format="3">
  <name>maxwell_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for maxwell robot</description>
  <maintainer email="todo@todo.com">maxwell</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- launch 文件必须依赖这两个 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
