<?xml version="1.0"?>
<package format="3">
  <name>maxwell_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for maxwell robot</description>
  <maintainer email="todo@todo.com">maxwell</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
