<?xml version="1.0"?>
<package format="3">
  <name>maxwell_vision</name>
  <version>0.0.1</version>
  <description>Vision core + ROS2 vision_node for ball/post detection.</description>
  <maintainer email="you@example.com">Maxwell</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>maxwell_msgs</depend>
  <depend>maxwell_core</depend>

  <!-- OpenCV is usually resolved via system dependency; keep as exec/build depend for clarity -->
  <exec_depend>opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
