<?xml version="1.0"?>
<package format="3">
  <name>maxwell_world</name>
  <version>0.0.1</version>
  <description>World model node and core logic.</description>
  <maintainer email="you@example.com">Maxwell</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>maxwell_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
